2008-05-29  Tor Lillqvist  <tml@novell.com>

	* glib/gnulib/printf-args.c (printf_fetchargs): wint_t is short on
	Windows, and gcc warns: "wint_t is promoted to int when passed
	through ... (so you should pass int not wint_t to va_arg)." And
	indeed g_print("%C", L'a') crashes. So do as gcc says then.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* configure.in: add G_DISABLE_SINGLE_INCLUDES to CPPFLAGS
	globally.

	* glib/tests/option-context.c
	* glib/tests/testing.c
	* tests/testingbase64.c: don't include <glib/gtestutils.h>

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.17.0 ===

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* README.in: Add a note about G_DISABLE_SINGLE_HEADERS.

	* NEWS: Updates

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* tests/casemap.txt:
	* tests/casefold.txt: Update for Unicode 5.1

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* Revert the patch for bug 527214 and related changes. GTimer
	is supposed to work without threads.

2008-05-27  simon.zheng  <simon.zheng@sun.com>

	* configure.in: Fix #533369. Check whether memeber statvfs.f_basetype 
        available or not.

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/*: Update to PCRE 7.7

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* glib/gchecksum.c: Add Since: tag to g_checksum_reset

	* glib/glib.symbols: Add g_checksum_reset

2008-05-25  Matthias Clasen  <mclasen@redhat.com>

	Bug 534137 – Typo in g_spawn_async_with_pipes doc

	* glib/gspawn.c: Fix a typo in the docs, pointed out by Ted Percival.

2008-05-25  Tor Lillqvist  <tml@novell.com>

	Bug 534319 - GLib's .pc files could use Libs.private

	* glib-2.0-uninstalled.pc.in
	* glib-2.0.pc.in
	* gmodule-2.0-uninstalled.pc.in
	* gmodule-2.0.pc.in
	* gmodule-export-2.0.pc.in
	* gmodule-no-export-2.0.pc.in: Move ICONV_LIBS and G_MODULE_LIBS
	to Libs.private.

2008-05-24  Matthias Clasen  <mclasen@redhat.com>
